syntax = "proto3";
option java_multiple_files = true;
import "google/protobuf/timestamp.proto";
package proto;

message GetUserResponse
{
  string username = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string shippingAddress = 5;
  string billingAddress = 6;
  string paymentInformation = 7;
}

message GetUserRequest
{
  string username = 1;
  string password = 2;
}

message ItemDTO
{
  int32 itemId = 1;
  double price = 2;
  string description = 3;
  string name = 4;
  repeated CategoryDTO category = 5;
  int32 quantity = 6;
  string colour = 7;
}

message CategoryDTO
{
  string name = 1;
  string description = 2;
  int32 categoryId = 3;
}

message GetOrderResponse
{
  bool success = 1;
}

message GetOrderRequest
{
  google.protobuf.Timestamp placedOn = 1;
  int32 paymentMethod = 2;
  double totalAmount = 3;
  int32 deliveryOption = 4;
  repeated ItemDTO items = 5;
}

service UserService
{
  rpc getUser(GetUserRequest) returns (GetUserResponse);
  rpc addOrder(GetOrderRequest) returns (GetOrderResponse);
}


